--- a/style.css
+++ b/style.css
@@ -1,83 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-
 * {
-    box-sizing: border-box;
+  font-family: "Source Sans Pro", sans-serif;
+  box-sizing: border-box;
 }
-
 
 body {
-    font-family: 'Ubuntu', sans-serif;
-    color: white;
-
-    background-image: linear-gradient(90deg, #7d5fff, #e213b5);
-    /* background-color: #333; */
-    /* color: #222; */
-    
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
-    height: 100vh;
-    overflow-x: hidden;
-    margin: 10;
+  margin: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 16rem));
+  grid-gap: 2rem;
+  justify-content: center;
+  /* background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.3)
+  ); */
 }
-
-h1 {
-    margin: 10px;
-    padding-top: 15px;
-    text-align: center;
-}
-
-h3 {
-    margin: 0;
-    padding-bottom: 15px;
-    text-align: center;
-}
-
-.flex-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-basis: 0;
-    /* flex: 1 1 0px */
-}
-
-a:link {
-    text-decoration: none;
-    color: white;
-  }
-
-a:visited {
-    text-decoration: none;
-    color: white;
-  }
-
 
 .card {
-    background-image: linear-gradient(130deg, #6bb8f6, #6839eb);
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px; 
+  overflow: hidden;
+  box-shadow: 0px 2px 20px rgb(76, 133, 255);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: transform 200ms ease-in;
+}
 
-    border-top: 1px solid #e5e5e5;
-    cursor: pointer;
-    margin: 5px;
-    width: 170px;
-    height: 150px;
-    
-  }
-  
-  
-  .card:hover {
-    transform: scale(1.2) ;
-  }
-  
-    .container {
-    padding: 10px 16px;
-    
-  }
+.card:hover {
+  transform: scale(1.05);
+}
 
+.card__tools {
+  padding: 0 1rem;
+  font-weight: bold;
+  color: #bb1eeb;
+  /* margin: 16px 16px; */
+}
 
+.card__image {
+  height: 12rem;
+  width: 100%;
+  object-fit: cover;
+}
 
+.card__title {
+  padding: 0 1rem;
+}
+
+.card__description {
+  padding: 0 1rem;
+}
+
+.card__btn {
+  font-family: "Source Sans Pro", sans-serif;
+  text-decoration: none;
+  padding: 0.4rem 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  margin: 16px 16px;
+  border: 2px solid #2596be;
+  color: #2596be;
+  border-radius: 12px;
+  transition: 0.2s ease;
+  background: transparent;
+  cursor: pointer;
+}
+
+.card__btn:hover {
+  color: white;
+  background: #f31936;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
